--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -14,7 +14,7 @@ main:
   #   url: '#projects'
   #   weight: 30
   - name: Activities
-    url: '#accomplishments'
+    url: '#experience'
     weight: 20
   - name: Publications
     url: '#featured'
