--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,7 +3,7 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
+title: Xuran Pan's Homepage # Website name
 baseurl: 'xuranpan.plus' # Website URL
 copyright: '© 2021 Xuran Pan' # Footer text, e.g. '© {year} Me'
 
