--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,9 +19,12 @@ main:
   - name: Publications
     url: '#featured'
     weight: 30
+  - name: Publications
+    url: '#publication'
+    weight: 40
   - name: Contact
     url: '#contact'
-    weight: 40
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
