--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,11 +16,11 @@ main:
   - name: Activities
     url: '#experience'
     weight: 20
-  - name: Publications
+  - name: Selected
     url: '#featured'
     weight: 30
   - name: Publications
-    url: '#publication'
+    url: '#publications'
     weight: 40
   - name: Contact
     url: '#contact'
