--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -3,9 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Xuran Pan's Homepage # Website name
-baseurl: 'xuranpan.plus' # Website URL
-copyright: '© 2021 Xuran Pan' # Footer text, e.g. '© {year} Me'
+title: Academic # Website name
+baseURL: 'https://example.com/' # Website URL
 
 ############################
 ## LANGUAGE
@@ -66,3 +65,7 @@ related:
       weight: 100
     - name: categories
       weight: 70
+security:
+  _merge: deep
+sitemap:
+  _merge: deep
