--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,24 +7,21 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  # - name: Posts
-  #   url: '#posts'
-  #   weight: 20
-  # - name: Projects
-  #   url: '#projects'
-  #   weight: 30
-  - name: Activities
-    url: '#experience'
+  - name: Posts
+    url: '#posts'
     weight: 20
-  - name: Selected
-    url: '#featured'
+  - name: Projects
+    url: '#projects'
     weight: 30
-  - name: Publications
-    url: '#publications'
+  - name: Talks
+    url: '#talks'
     weight: 40
+  - name: Publications
+    url: '#featured'
+    weight: 50
   - name: Contact
     url: '#contact'
-    weight: 50
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
